--- a/composer.json
+++ b/composer.json
@@ -7,13 +7,15 @@
         "email" : "brian@stormdelta.com"
     }],
     "keywords" : [
-        "latex encode encoder symfony bundle"
+        "latex",
+        "encode",
+        "encoder",
     ],
     "license" : [
         "MIT"
     ],
     "require" : {
-
+        "php": ">=5.3.0"
     },
     "autoload" : {
         "psr-0" : {
@@ -25,7 +27,7 @@
     }],
     "extra" : {
     "branch-alias" : {
-        "master" : "v0.1-dev"
+        "master" : "v0.1.1-dev"
         }
     }
 }
