Typo in composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "keywords" : [
         "latex",
         "encode",
-        "encoder",
+        "encoder"
     ],
     "license" : [
         "MIT"
